Refactoring
Refactoring and language feature updates using code inspection profiles