@@ -35,19 +35,19 @@ public class CoinBagLarge extends CycleEvent {
 	 * Stores an array of items into each map with the corresponding rarity to the list
 	 */
 	static {
-		items.put(Rarity.COMMON, 
-			Arrays.asList(
-					new GameItem(995, 75000))
+		items.put(Rarity.COMMON,
+                List.of(
+                        new GameItem(995, 75000))
 	);
 			
 		items.put(Rarity.UNCOMMON,
-				Arrays.asList(
-						new GameItem(995, 90000))
+                List.of(
+                        new GameItem(995, 90000))
 	);
 			
 			items.put(Rarity.RARE,
-					Arrays.asList(
-							new GameItem(995, 120000))
+                    List.of(
+                            new GameItem(995, 120000))
 	);
 							
 							
